--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,19 @@
         android:theme="@style/Theme.MaterialComponents"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:exported="true"
-            android:theme="@style/Theme.MaterialComponents.NoActionBar">
+            android:name=".SplashScreenActivity"
+            android:theme="@style/Base.Theme.PinjamBarang"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MaterialComponents.NoActionBar">
         </activity>
         <activity
             android:name=".AddActivity"
